test/should_not_compile/int-constant-2.sml
fun id x = x;
val _ = id (0xffff_ffff_ffff_ffff : Int64.int);
